[package]
name = "actix-web-request-uuid"
description = "Request UUID middleware for actix-web"
version = "0.2.0"
authors = ["Yusuke Yoshida <written-crib-taco@duck.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/YusukeYoshida8849/actix-web-request-uuid"
homepage = "https://github.com/YusukeYoshida8849/actix-web-request-uuid"
documentation = "https://docs.rs/actix-web-request-uuid"
keywords = ["actix", "actix-web", "middleware", "request-id", "uuid"]
edition = "2021"

[badges]
codecov = { repository = "YusukeYoshida8849/actix-web-request-uuid", branch = "main", service = "github" }

[dependencies]
actix-web = "^4.5.1"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.10.0"
serde_json = "1.0"

[[example]]
name = "custom_length"
path = "examples/custom_length.rs"
